@@ -40,20 +40,28 @@ class CalculatedBusImpl extends AbstractBus implements CalculatedBus {
 
     /**
      * Find a terminal to retrieve voltage, angle or connected and synchronous component numbers.
-     * If the terminals list contains at least one element, we use the first terminal as reference.
-     * Otherwise this method tries to find a terminal which does not belong to this bus, but to the same "electrical" bus
+     * If the terminals list contains at least one element, we use the first terminal with a defined voltage or angle value as reference.
+     * Otherwise, this method tries to find a terminal which does not belong to this bus, but to the same "electrical" bus
      * and therefore can be used as reference.
      *
      * @param voltageLevel The {@literal VoltageLevel} instance to traverse
      * @param nodes The nodes which belong to this bus
      * @param terminals The terminals belong to this bus
-     * @return The first terminal of the {@code terminals} list, or a terminal which belongs to an equivalent "electrical" bus.
+     * @return The first terminal with defined voltage or angle if exists, otherwise the first
+     * terminal of the {@code terminals} list, or a terminal which belongs to an equivalent "electrical" bus.
      */
     private static NodeTerminal findTerminal(VoltageLevelExt voltageLevel, TIntArrayList nodes, List<NodeTerminal> terminals) {
         if (!terminals.isEmpty()) {
-            return terminals.get(0);
+            return terminals.stream()
+                    .filter(CalculatedBusImpl::hasDefinedVoltageOrAngle)
+                    .findFirst()
+                    .orElse(terminals.getFirst());
         }
         return (NodeTerminal) Networks.getEquivalentTerminal(voltageLevel, nodes.getQuick(0));
+    }
+
+    private static boolean hasDefinedVoltageOrAngle(NodeTerminal t) {
+        return !Double.isNaN(t.getV()) || !Double.isNaN(t.getAngle());
     }
 
     private void checkValidity() {
